# portfolio

./: .access_token  .gitignore  Cargo.toml  README.md
mysql/: create_tables.sql  docker-compose.yml
python/: dashboard.py
python/notebooks/: cyrpto_analysis.ipynb
python/notebooks/.ipynb_checkpoints/: cyrpto_analysis-checkpoint.ipynb
python/simple-nba-betting/data/raw/: atl_regular_2021-2022.csv  bos_regular_2021-2022.csv  lal_regular_2021-2022.csv
python/simple-nba-betting/src/: app.py  utils.py
src/: main.rs
templates/: about.html.tera  home.html.tera  post.html.tera
