[package]
name = "blog"
version = "0.1.0"
authors = ["cyobero <cyobero@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde_derive = "1.0"
serde_json = "1.0"
serde = "1.0"
tera = "1.0.2"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.10"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["tera_templates", "json", "serve"]

[development]
template_dir = "templates/"
static_dir = "static/"
